--- a/contents/html/cogkit.html
+++ b/contents/html/cogkit.html
@@ -2,30 +2,31 @@
 <html lang = "ja">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="../css/test.css">
+	<link rel="stylesheet" href="../css/swiper.min.css">
+	<link rel="stylesheet" href="../css/kitcog.css">
 	<title>認知行動科学研究室@KIT</title>
 </head>
 <body>
 
-	<header class="padding_template">
+	<header>
 		<div class="container">
 			<nav class = "navbar">
 				<a class="header_title" href="/"><strong>COG@KIT</strong></a>
 				<div class="header_navgroup">
 					<a class="header_navitem" href="/#research">
-						<img src="../icon/search.svg" width=15px>
+						<img src="../icon/search.svg" width=15px alt="*">
 						研究内容
 					</a>
 					<a class="header_navitem" href="/#achivement">
-						<img src="../icon/achivement.svg" width=15px>
+						<img src="../icon/achivement.svg" width=15px alt="*">
 						研究実績
 					</a>
 					<a class="header_navitem" href="/#member">
-						<img src="../icon/member.svg" width=15px>
+						<img src="../icon/member.svg" width=15px alt="*">
 						メンバー
 					</a>
 					<a class="header_navitem" href="/#participants">
-						<img src="../icon/participants.svg" width=15px>
+						<img src="../icon/participants.svg" width=15px alt="*">
 						実験参加者募集
 					</a>
 				</div>
@@ -33,16 +34,30 @@
 		</div>
 	</header>
 
-	<div class="container">
-		<!--ヘッダー分空白-->
-		<p>
-		 <div style="margin-bottom:70px"></div>
-		</p>
-		<div class="Carousel">sampletext</div>
-		<p>
-		 <div style="margin-bottom:1000px"></div>
-	 </p>
-	 </div>
+	<!-- スライダーのメインコンテナの div 要素 -->
+	<div class="swiper-container">
+	  <!-- ラッパーの（スライドを囲む） div 要素 -->
+	  <div class="swiper-wrapper">
+	    <!-- それぞれのスライドの div 要素 -->
+			<div class="swiper-slide" id = "slide1">
+				<h1 class = "slide_text"><strong>SAMPLE MESSAGE</strong></h1>
+			</div>
+			<div class="swiper-slide" id="slide2">
+				<h1 class = "slide_text"><strong>SAMPLE MESSAGE</strong></h1>
+			</div>
+	    <div class="swiper-slide" id="slide3">
+				<h1 class = "slide_text"><strong>SAMPLE MESSAGE</strong></h1>
+			</div>
+	  </div>
+	  <!-- ページネーションの div 要素 -->
+	  <div class="swiper-pagination"></div>
+
+	  <!-- ナビゲーションボタンの div 要素-->
+	  <div class="swiper-button-prev"></div>
+	  <div class="swiper-button-next"></div>
+	</div>
+
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 	<footer>
 		<div class = "container">
@@ -55,5 +70,8 @@
 		</div>
 	</footer>
 
+
+	<script src="../js/swiper.min.js"></script>
+	<script src="../js/kitcog.js"></script>
 </body>
 </html>
