--- a/contents/html/achivement/index.html
+++ b/contents/html/achivement/index.html
@@ -10,7 +10,9 @@
 	<header>
 		<div class="container">
 			<nav class = "navbar">
-				<a class="header_title" href="../index.html"><strong>COG@KIT</strong></a>
+				<a class="header_title" href="../index.html">
+					<img src="../../icon/cog_icon.png"  height=40px alt="*">
+				</a>
 				<div class="header_navgroup">
 					<a class="header_navitem" href="../reserch/index.html">
 						<img src="../../icon/search.svg" width=15px alt="*">
