--- a/contents/html/index.html
+++ b/contents/html/index.html
@@ -11,7 +11,9 @@
 	<header>
 		<div class="container">
 			<nav class = "navbar">
-				<a class="header_title" href="index.html"><strong>COG@KIT</strong></a>
+					<a class="header_title" href="index.html">
+						<img src="../icon/cog_icon.png"  height=40px alt="*">
+					</a>
 				<div class="header_navgroup">
 					<a class="header_navitem" href="reserch/index.html">
 						<img src="../icon/search.svg" width=15px alt="*">
@@ -57,20 +59,16 @@
 	  <div class="swiper-button-next"></div>
 	</div>
 
-	<div class="container">
-
-		<hr style="margin-bottom: 0;"><hr style="margin-top: 3px;">
-
-		<div class="containts">
-			<h1 class="containts_text">
-				<a href="#participants" style="font-size: 20px;"> 実験協力希望者の方はこちら</a>
-			</h1>
+		<div class="containts banner">
+			<a class = " banner_text" href="participants/index.html">
+				<h4 style="margin: 0">実験協力者の方はこちら</h4>
+			</a>
 		</div>
 
-		<hr style="margin-bottom: 0;"><hr style="margin-top: 3px;">
 
+	<div class="container">
 		<div class="containts">
-			<h1 class="containts_text">認知行動科学とは？</h1>
+			<h2 class="containts_text">認知行動科学</h2>
 		</div>
 		<div class="containts">
 			<h3 class="containts_text" style="font-size: 15px;">親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ。別段深い理由でもない。新築の二階から首を出していたら、同級生の一人が冗談に、いくら威張っても、そこから飛び降りる事は出来まい。弱虫やーい。と囃したからである。小使に負ぶさって帰って来た時、おやじが大きな眼をして二階ぐらいから飛び降りて腰を抜かす奴があるかと云ったから、この次は抜かさずに飛んで見せますと答えた。（青空文庫より）</h3>
