--- a/contents/html/perticipants/index.html
+++ b/contents/html/perticipants/index.html
@@ -22,11 +22,11 @@
 						<img src="../../icon/achivement.svg" width=15px alt="*">
 						研究実績
 					</a>
-					<a class="header_navitem" href="index.html">
+					<a class="header_navitem" href="../member/index.html">
 						<img src="../../icon/member.svg" width=15px alt="*">
 						メンバー
 					</a>
-					<a class="header_navitem" href="../participants/index.html">
+					<a class="header_navitem" href="index.html">
 						<img src="../../icon/participants.svg" width=15px alt="*">
 						実験参加者募集
 					</a>
@@ -34,40 +34,6 @@
 			</nav>
 		</div>
 	</header>
-
-  <div class="container">
-    <h1 style="margin-top: 98px;">メンバー</h1>
-      <ul class="member_tag"><h2>教員</h2>
-        <h3 class="member_text"><li>西崎 友規子</li></h3>
-      </ul>
-
-      <ul class="member_tag"style="margin-bottom: 30px;"><h2>学生</h2></ul>
-
-      <ul class="member_tag"><h3>M2</h3>
-        <div class="member_group">
-          <h3 class="member_text"><li>塩谷 和朗</li></h3>
-          <h3 class="member_text"><li>草野 泰輝</li></h3>
-          <h3 class="member_text"><li>福井 一将</li></h3>
-          <h3 class="member_text"><li>光國 和宏</li></h3>
-        </div>
-      </ul>
-      <ul class="member_tag"><h3>M1</h3>
-        <div class="member_group">
-          <h3 class="member_text"><li>打谷 拓巳</li></h3>
-          <h3 class="member_text"><li>大岸 真理子</li></h3>
-          <h3 class="member_text"><li>笹木 海志</li></h3>
-          <h3 class="member_text"><li>森嵜 洋之</li></h3>
-        </div>
-      </ul>
-      <ul class="member_tag"><h3>B4</h3>
-        <div class="member_group">
-          <h3 class="member_text"><li>麻生 智史</li></h3>
-          <h3 class="member_text"><li>鎌苅 亮汰</li></h3>
-          <h3 class="member_text"><li>八尾 恵利花</li></h3>
-          <h3 class="member_text"><li>吉松 駿平</li></h3>
-        </div>
-      </ul>
-  </div>
 
 	<footer>
 		<div class = "container">
