--- a/contents/html/member/index.html
+++ b/contents/html/member/index.html
@@ -36,37 +36,76 @@
 	</header>
 
   <div class="container">
-    <h1 style="margin-top: 98px;">メンバー</h1>
-      <ul class="member_tag"><h2>教員</h2>
-        <h3 class="member_text"><li>西崎 友規子</li></h3>
-      </ul>
+		<div class="containts">
+	    <h1 style="margin-top: 98px;
+		  border-bottom:solid #FFD644;">メンバー</h1>
 
-      <ul class="member_tag"style="margin-bottom: 30px;"><h2>学生</h2></ul>
+				<h2 class="member_tag">教員</h2>
+	      <div class="member_item">
+					<img src="../../icon/Web citron/icon_45_1.gif" alt="*" class="member_image">
+	        <h3 class="member_text">准教授 ： 西崎 友規子</h3>
+	      </div>
 
-      <ul class="member_tag"><h3>M2</h3>
-        <div class="member_group">
-          <h3 class="member_text"><li>塩谷 和朗</li></h3>
-          <h3 class="member_text"><li>草野 泰輝</li></h3>
-          <h3 class="member_text"><li>福井 一将</li></h3>
-          <h3 class="member_text"><li>光國 和宏</li></h3>
-        </div>
-      </ul>
-      <ul class="member_tag"><h3>M1</h3>
-        <div class="member_group">
-          <h3 class="member_text"><li>打谷 拓巳</li></h3>
-          <h3 class="member_text"><li>大岸 真理子</li></h3>
-          <h3 class="member_text"><li>笹木 海志</li></h3>
-          <h3 class="member_text"><li>森嵜 洋之</li></h3>
-        </div>
-      </ul>
-      <ul class="member_tag"><h3>B4</h3>
-        <div class="member_group">
-          <h3 class="member_text"><li>麻生 智史</li></h3>
-          <h3 class="member_text"><li>鎌苅 亮汰</li></h3>
-          <h3 class="member_text"><li>八尾 恵利花</li></h3>
-          <h3 class="member_text"><li>吉松 駿平</li></h3>
-        </div>
-      </ul>
+	      <h2 class="member_tag"style="margin-bottom: 30px;">学生</h2>
+
+	      <h3 class="member_tag">M2</h3>
+	        <div class="member_group">
+						<div class="member_item">
+							<img src="../../icon/Web citron/m2/icon_08_0.gif" class="member_image" style="transform: rotate(90deg);" alt="*">
+							<h3 class="member_text">塩谷 和朗</h3>
+						</div>
+						<div class="member_item">
+							<img src="../../icon/Web citron/m2/icon_08_1.gif" class="member_image" style="transform: rotate(90deg);" alt="*">
+							<h3 class="member_text">草野 泰輝</h3>
+						</div>
+						<div class="member_item">
+							<img src="../../icon/Web citron/m2/icon_08_2.gif" class="member_image" style="transform: rotate(90deg);" alt="*">
+							<h3 class="member_text">福井 一将</h3>
+						</div>
+						<div class="member_item">
+							<img src="../../icon/Web citron/m2/icon_08_3.gif" class="member_image" style="transform: rotate(90deg);" alt="*">
+							<h3 class="member_text">光國 和宏</h3>
+						</div>
+	        </div>
+	      <h3 class="member_tag">M1</h3>
+	        <div class="member_group">
+						<div class="member_item">
+							<img src="../../icon/Web citron/m1/icon_91_1.gif" class="member_image" alt="*">
+						  <h3 class="member_text">打谷 拓巳</h3>
+						</div>
+						<div class="member_item">
+							<img src="../../icon/Web citron/m1/icon_91_3.gif" class="member_image" alt="*">
+						  <h3 class="member_text">大岸 真理子</h3>
+						</div>
+						<div class="member_item">
+							<img src="../../icon/Web citron/m1/icon_91_6.gif" class="member_image" alt="*">
+						  <h3 class="member_text">笹木 海志</h3>
+						</div>
+						<div class="member_item">
+							<img src="../../icon/Web citron/m1/icon_91_7.gif" class="member_image" alt="*">
+						  <h3 class="member_text">森嵜 洋之</h3>
+						</div>
+					</div>
+	      <h3 class="member_tag">B4</h3>
+	        <div class="member_group">
+						<div class="member_item">
+							<img src="../../icon/Web citron/b4/icon_58_1.gif" class="member_image" alt="*">
+						  <h3 class="member_text">麻生 智史</h3>
+						</div>
+						<div class="member_item">
+							<img src="../../icon/Web citron/b4/icon_58_3.gif" class="member_image" alt="*">
+						  <h3 class="member_text">鎌苅 亮汰</h3>
+						</div>
+						<div class="member_item">
+							<img src="../../icon/Web citron/b4/icon_58_6.gif" class="member_image" alt="*">
+						  <h3 class="member_text">八尾 恵利花</h3>
+						</div>
+						<div class="member_item">
+							<img src="../../icon/Web citron/b4/icon_58_8.gif" class="member_image" alt="*">
+						  <h3 class="member_text">吉松 駿平</h3>
+						</div>
+					</div>
+			</div>
   </div>
 
 	<footer>
